resources/k8s/ocp_okd/v3.0.0/qotd_author.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qotd-author
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-author
  template:
    metadata:
      labels:
        app: qotd-author
    spec:
      restartPolicy: Always
      containers:
        - name: qotd-author
          image: registry.gitlab.com/quote-of-the-day/qotd-author-service:3.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3002
              protocol: TCP
            - name: svc
              containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 10
          resources:
            requests:
              cpu: "25m"
              memory: "350Mi"
            limits:
              cpu: "200m"
              memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-author
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
      name: http
  selector:
    app: qotd-author
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-author-svc
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: svc
  selector:
    app: qotd-author
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-author
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  subdomain: ''
  to:
    kind: Service
    name: qotd-author
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-author-svc
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  subdomain: ''
  to:
    kind: Service
    name: qotd-author-svc
    weight: 100
  port:
    targetPort: svc
  wildcardPolicy: None
