resources/k8s/ocp_okd/v3.0.0/qotd_quote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qotd-quote
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-quote
  template:
    metadata:
      labels:
        app: qotd-quote
    spec:
      restartPolicy: Always
      containers:
        - name: qotd-quote
          image: registry.gitlab.com/quote-of-the-day/quote-service:3.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
            - name: svc
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "25m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-quote
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: qotd-quote
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-quote-svc
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: svc
  selector:
    app: qotd-quote
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-quote
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  subdomain: ''
  to:
    kind: Service
    name: qotd-quote
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-quote-svc
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  subdomain: ''
  to:
    kind: Service
    name: qotd-quote-svc
    weight: 100
  port:
    targetPort: svc
  wildcardPolicy: None
